edits in docker, swagger and validations
